--- a/biy-stylesheet.css
+++ b/biy-stylesheet.css
@@ -119,10 +119,11 @@ a:hover
 .menu-button{
 	padding-top:10px;
 	background-image: url(images/button-up.png);
-	width: 110px;
+	width: 90px;
 	height: 28px;
 	font-family:"verdana", verdana, sans-serif;
 	font-size:9pt;
+	padding-left:0px;
 }
 
 .back-button{
