--- a/menu-stylesheet.css
+++ b/menu-stylesheet.css
@@ -12,9 +12,9 @@ ul.sdt_menu a{
 }
 ul.sdt_menu li{
 	float:left;
-	/*object width (invisible)*/
+	/*object width and height (invisible)*/
 	width:160px;
-	height:85px;
+	height:55px;
 	position:relative;
 	cursor:pointer;
 }
@@ -22,9 +22,9 @@ ul.sdt_menu li > a{
 	position:absolute;
 	top:0px;
 	left:0px;
-	/*actual block width (visible)*/
+	/*actual block width and height (visible)*/
 	width:160px;
-	height:85px;
+	height:55px;
 	z-index:12;
 	/* menu item background */
 	/* background:transparent url(../images/overlay.png) no-repeat bottom right; */
@@ -47,18 +47,21 @@ ul.sdt_menu li a img{
 }
 ul.sdt_menu li span.sdt_wrap{
 	position:absolute;
-	top:25px;
+	/*NON-ACTIVE TEXT TOP MARGIN*/
+	top:15px;
 	/*left:0px;*/
 	margin-left:0px;
-	width:210px;
+	/*TEXT ALIGNMENT DIV*/
+	width:160px;
 	height:60px;
 	z-index:15;
 }
 ul.sdt_menu li span.sdt_active{
 	position:absolute;
 	background:#111;
-	top:85px;
-	width:210px;
+	top:55px;
+	/*WIDTH OF OPENED TAB*/
+	width:160px;
 	height:0px;
 	left:0px;
 	z-index:14;
@@ -79,8 +82,8 @@ ul.sdt_menu li span span.sdt_link {
 }
 
 ul.sdt_menu li span span.sdt_link{
-	color:#fff;/*TEXT COLOR*/
-	font-size:24px;
+	color:#fff;/*TEXT COLOR AND SIZE*/
+	font-size:18px;
 	float:left;
 	clear:both;
 }
@@ -95,10 +98,10 @@ ul.sdt_menu li span span.sdt_descr{
 ul.sdt_menu li div.sdt_box{
 	display:block;
 	position:absolute;
-	width:170px;
+	width:160px;
 	overflow:hidden;
 	height:170px;
-	top:85px;
+	top:55px;
 	left:0px;
 	display:none;
 	background:#000;
