--- a/biy-stylesheet.css
+++ b/biy-stylesheet.css
@@ -130,3 +130,37 @@ a:hover
 	width:100px;
 	background-color:green;
 }
+
+.button{	
+	background-color:white; 
+	float:left;
+	color:#404040;
+	text-align:center;
+	margin-left:10px;
+	margin-right:auto;
+	width:110px;
+	height:25px;
+	padding-top:3px;
+	font-family:"verdana", verdana, sans-serif;
+	}
+	
+.button-clicked{
+	float:left;
+	text-align:center;
+	margin-left:10px;
+	margin-right:auto;
+	width:110px;
+	height:25px;
+	color:#EB0000;
+	padding-top:3px;
+	font-family:"verdana", verdana, sans-serif;	
+	}
+	
+.selection-row{
+	height:200px;
+}
+
+.center-smaller{
+	width:300px;
+	height:150px;
+}
