No inline comments in the module selection table page
the rest is to follow.

--- a/biy-stylesheet.css
+++ b/biy-stylesheet.css
@@ -190,23 +190,6 @@ a:hover
 	width:800px;
 }
 
-span.reference{
-	position:fixed;
-	left:10px;
-	bottom:10px;
-	font-size:12px;
-}
-span.reference a{
-	color:#aaa;
-	text-transform:uppercase;
-	text-decoration:none;
-	text-shadow:1px 1px 1px #000;
-	margin-right:30px;
-}
-	span.reference a:hover{
-		color:#ddd;
-}
-
 .container-instructions{
 	width:800px;
 }
@@ -220,4 +203,9 @@ span.reference a{
 	width:800px;
 	background-color:#404040;
 	margin-bottom:-4px;
+}
+
+.category-table{
+	margin:auto;
+	border: 0px;
 }
