--- a/biy-stylesheet.css
+++ b/biy-stylesheet.css
@@ -209,3 +209,31 @@ a:hover
 	margin:auto;
 	border: 0px;
 }
+
+.menu-text{
+	text-align:center;
+}
+
+#module-of-the-week{
+	float:left;
+	box-shadow: 0px 0px 4px #000;
+	text-shadow: 1px 1px 1px #000;
+	background-color: grey;
+	width: 350px;
+	height: 50px;
+}
+
+#missions{
+	float:right;
+	box-shadow:0px 0px 4px #000;
+	text-shadow:1px 1px 1px #000;
+	background-color:grey;
+	width:350px;
+	height:50px;
+}
+
+#main-page-week-module-missions-container{
+	margin:auto;
+	width:800px;
+	margin-top:100px;
+}
