--- a/biy-stylesheet.css
+++ b/biy-stylesheet.css
@@ -237,3 +237,49 @@ a:hover
 	width:800px;
 	margin-top:100px;
 }
+
+#header-menu-container{
+	width:800px;
+	margin-left:auto;
+	margin-right:auto;
+	clear:both;
+}
+
+#navigation-abr{
+	margins:0px;
+	list-style-type:none; /*list-type-style:none get rid of the bullets in the list*/
+	float:left;
+	height:50px;
+	width:800px;
+	padding:0px;
+	text-align:center;
+}
+
+#biy-logo{
+	float:left;
+	height:35px;
+}
+
+#biy-logo img{
+	max-height:100%;
+}
+
+.nav-button{
+	float:left;
+}
+
+#header-line{
+	height:1px;
+	width:800px;
+	background-color:#404040;
+	margin-left:auto;
+	margin-right:auto;
+	margin-bottom:12px;
+	margin-top:1px;
+	clear:both;
+	position:relative;
+}
+
+#empty-span{
+	clear:none;
+}
