--- a/biy-stylesheet.css
+++ b/biy-stylesheet.css
@@ -124,16 +124,30 @@ a:hover
 	font-family:"verdana", verdana, sans-serif;
 	margin-left:auto;
 	margin-right:auto;
+	border:none;
 }
 
 .menu-button{
 	padding-top:10px;
 	background-image: url(images/button-up.png);
-	width: 91px;
-	height: 28px;
+	width: 90px;
+	height: 25px;
 	font-family:"verdana", verdana, sans-serif;
 	font-size:9pt;
 	padding-left:0px;
+}
+
+.menu-button-blocks{
+	padding-top:10px;
+	background-color: #FFFFFF;
+	color: #FF0000;
+	width: 111px;
+	height: 25px;
+	font-family:"verdana", verdana, sans-serif;
+	font-size:9pt;
+	padding-left:0px;
+	text-align: right;
+	margin-right:20px;
 }
 
 .back-button{
@@ -179,7 +193,6 @@ a:hover
 	width:100%;
 	height:100%;
 	margin:auto;
-	/*border: solid orange 1px;*/
 }
 
 .wrapped_picture{
@@ -191,13 +204,11 @@ a:hover
 	display:inline-block;
 	width:325px;
 	float:right;
-	/*margin:auto;*/
 	text-align:center;
 }
 
 #build-button{
 	width:300px;
-	/*margin:auto;*/
 	float:right;
 	text-align:center;
 }
@@ -291,10 +302,21 @@ a:hover
 #biy-logo{
 	float:left;
 	height:35px;
+	width:219px;
+	margin:0px;
+	border:none;
 }
 
 #biy-logo img{
 	max-height:100%;
+	margin:0px;
+	float:left;
+	border:none;
+}
+
+.icon{
+	width:150px;
+	border:none;
 }
 
 .nav-button{
