--- a/biy-stylesheet.css
+++ b/biy-stylesheet.css
@@ -248,6 +248,9 @@ a:hover
 
 .bottom-info{
 	clear:both;
+	margin:auto;
+	text-align: center;
+	width:800px;
 }
 
 .line{
@@ -269,20 +272,32 @@ a:hover
 
 #module-of-the-week{
 	float:left;
-	box-shadow: 0px 0px 4px #000;
-	text-shadow: 1px 1px 1px #000;
-	background-color: grey;
+	background-color: white;
 	width: 350px;
-	height: 50px;
+	height: 350px;
+	font-family:"verdana", verdana, sans-serif;
+	font-weight:bold;
 }
 
 #missions{
 	float:right;
-	box-shadow:0px 0px 4px #000;
-	text-shadow:1px 1px 1px #000;
-	background-color:grey;
-	width:350px;
-	height:50px;
+	background-color: white;
+	width: 350px;
+	height: 350px;
+	font-family:"verdana", verdana, sans-serif;
+	font-weight:bold;
+}
+
+#missions img{
+	width:100%;
+	margin: 20px 0px;	
+	border: solid black 5px;
+}
+
+#module-of-the-week img{
+	width:100%;
+	margin: 20px 0px;
+	border: solid black 5px;
 }
 
 #main-page-week-module-missions-container{
@@ -391,7 +406,7 @@ a:hover
 	height:1px;
 	width:800px;
 	background-color:#404040;
-	margin:0 auto;
+	margin: 0px auto;
 }
 
 #bottom-text{
