changed module of the week to newest module

--- a/biy-stylesheet.css
+++ b/biy-stylesheet.css
@@ -229,13 +229,13 @@ a:hover
 }
 
 #caption{
-	margin-left:500px;
+	margin-left:63%;
 	text-align:left;
 }
 
 #caption2 {
 	height:315px;
-	margin-left:850px;
+	margin-left:58%;
 	text-align:left;
 	width:300px;
 }
