--- a/biy-stylesheet.css
+++ b/biy-stylesheet.css
@@ -7,7 +7,7 @@ body{
 	font-size: 1.5em;
 	font-weight: normal;
 	color: #808080;
-	margin: 0px 0px 0px 0px;
+	margin: -20px 0px 0px 0px;
 	padding: 0px 0px 0px 0px;
 	width:100%;
 	text-align:center;
@@ -199,13 +199,13 @@ a:hover
 }
 
 .img_wrapper{
-	width:100%;
-	height:100%;
+	width:400px;
+	height:300px;
 	margin:auto;
 }
 
 .wrapped_picture{
-	max-height:100%;
+	height:300px;
 	margin:auto;
 }
 
@@ -237,7 +237,7 @@ a:hover
 	height:315px;
 	margin-left:63%;
 	text-align:left;
-	width:300px;
+	width:290px;
 }
 
 .centered-div{
