--- a/biy-stylesheet.css
+++ b/biy-stylesheet.css
@@ -7,7 +7,7 @@ body{
 	font-size: 1.5em;
 	font-weight: normal;
 	color: #808080;
-	margin: -20px 0px 0px 0px;
+	margin: 0px 0px 0px 0px;
 	padding: 0px 0px 0px 0px;
 	width:100%;
 	text-align:center;
@@ -133,13 +133,17 @@ a:hover
 }
 
 .menu-button{
-	padding-top:10px;
+	vertical-align:middle;
+	display:table-cell;
+	line-height:35px;
+	valign:middle; /*for Internet Explorer */
 	background-image: url(images/button-up.png);
 	width: 90px;
-	height: 25px;
+	height: 35px;
 	font-family:"verdana", verdana, sans-serif;
 	font-size:9pt;
 	padding-left:0px;
+	cursor: pointer; cursor: hand;
 }
 
 .menu-button-blocks{
