--- a/biy-stylesheet.css
+++ b/biy-stylesheet.css
@@ -263,7 +263,7 @@ a:hover
 	text-align:center;
 	margin:auto;
 	width:800px;
-	cursor: pointer;
+	
 }
 
 .50pxdistanced{
@@ -288,6 +288,7 @@ a:hover
 
 .line{
 	height:1px;
+	font-size:1px; /*need to do this for IE*/
 	width:800px;
 	background-color:#404040;
 	clear:both;
@@ -425,6 +426,7 @@ a:hover
 	margin-left:auto;
 	margin-right:auto;
 	clear:both;
+	font-size:1px; /*need to do this for IE*/
 }
 
 #content{
@@ -444,6 +446,7 @@ a:hover
 	width:800px;
 	background-color:#404040;
 	margin: 0px auto;
+	font-size:1px; /*need to do this for IE*/
 }
 
 #bottom-text{
