--- a/biy-stylesheet.css
+++ b/biy-stylesheet.css
@@ -250,7 +250,7 @@ a:hover
 	margin: auto;
 }
 
-#caption-overview
+#caption-and-button
 {
 	float:right;
 	width:300px;
@@ -259,6 +259,14 @@ a:hover
 	position:relative;
 }
 
+#caption-overview
+{
+	float:right;
+	width:300px;
+	height:375px;
+	text-align:left;
+	position:relative;
+}
 .centered-div{
 	text-align:center;
 	margin:auto;
