Menu button is greyed when on module page
Added some javascript to intructions and overview that highlights the
type of module that user is on.

Also added some margins to slider arrows to make them look more inline
on IE.

--- a/biy-stylesheet.css
+++ b/biy-stylesheet.css
@@ -453,7 +453,7 @@ a:hover
 	height:1px;
 	width:800px;
 	background-color:#404040;
-	margin: 0px auto;
+	margin: 10px auto;
 	font-size:1px; /*need to do this for IE*/
 }
 
@@ -486,5 +486,5 @@ height: 233px;
 .slider-arrow{
 font-weight:bold; 
 font-size:16pt;
-
+margin-top:-10px;
 }
